sample-app/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample
  name: sample
  namespace: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  strategy: {}
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - image: projects.registry.vmware.com/tce/logo:latest
        name: logo
        resources: {}
status: {}
