sample-app/1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample
  name: sample
  namespace: sample
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sample
status:
  loadBalancer: {}
