sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample
  name: sample
  namespace: sample
spec:
  selector:
    app: sample
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
