sample-app/ingress-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample
  namespace: sample
spec:
  rules:
  - host: sample.tce-demo.samsanders.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample
            port:
              number: 8080
